# Clapp

./: .gitignore  LICENSE  README.md  meson.build
include/clapp/: clapp.hpp  macro_sequence_for.h  types.hpp
tests/: meson.build  test_simple.cpp
